Closed Bug 1147224 Opened 11 years ago Closed 11 years ago

Optimization tracking incorrectly accumulates multiple optimizations when restarting loops

Categories

(Core :: JavaScript Engine: JIT, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: shu, Unassigned)

References

Details

Attachments

(1 file)

IonBuilder can restart loops and visit the same bytecode multiple times. This results in optimization information being appended to the same BytecodeSite. We should only keep the last one.
Blocks: jit-view
Attachment #8582776 - Flags: review?(kvijayan) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: