Bug 1147224 - Only keep the optimization information of the last time IonBuilder visits a bytecode location. (r=djvj)